src/test/deca/context/valid/wobj/test_print_int_list.deca
// Description:
//    Programme minimaliste utilisant print d'une liste d'expressions .
//
// Resultats:
//    affichage de 12 puis 13
//
// Historique:
//    cree le 01/01/2024

{
        print(12, 13.0);
}
