src/test/deca/context/invalid/obj/declmethod/test_method_already_defined.deca
// Description:
//    declaration d'une methode deja definie
//
// Resultats:
//   methode deja définie
// 
// Historique:
//    cree le 01/01/2024

class A{
    void a(){
    }
    int a(){
    }
}
